quarkus-store-config/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  labels:
    app: store-demo
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: store-demo
  type: LoadBalancer
